# advent_of_code

./: .gitmodules  CMakeLists.txt  README  compile.sh  initialize_project.sh  run_tests.sh
src/: CMakeLists.txt
src/2019/day_1/: CMakeLists.txt  Converter.cpp  Converter.hpp  EquationDoubleChecker.cpp  EquationDoubleChecker.hpp  Fuel.cpp  Fuel.hpp  FuelCounterUpper.cpp  FuelCounterUpper.hpp  Interpreter.hpp  Module.cpp  Module.hpp  main.cpp
src/2019/day_1/impl/: Converter.cpp  Converter.hpp  Fuel.hpp  Module.hpp
src/2020/: CMakeLists.txt
src/2020/day_1/: CMakeLists.txt  ExpensesReport.cpp  ExpensesReport.hpp  Interpreter.hpp  main.cpp
src/2020/day_2/: CMakeLists.txt  IStrategy.hpp  Interpreter.hpp  PasswordData.hpp  Passwords.cpp  Passwords.hpp  main.cpp
src/2020/day_2/strategies/: MinMax.cpp  MinMax.hpp  Position.cpp  Position.hpp
src/2020/day_3/: CMakeLists.txt  Coords.hpp  Geology.cpp  Geology.hpp  IMap.hpp  ISquare.hpp  ITobogan.hpp  Interpreter.hpp  Map.cpp  Map.hpp  Tobogan.cpp  Tobogan.hpp  main.cpp
src/2020/day_3/squares/: Empty.cpp  Empty.hpp  Tree.cpp  Tree.hpp
src/2020/day_4/: Batch.cpp  Batch.hpp  CMakeLists.txt  Interpreter.hpp  main.cpp
src/2020/day_4/passport/: Builder.cpp  Builder.hpp  IToken.hpp  Passport.cpp  Passport.hpp  Scanner.cpp  Scanner.hpp  Tokens.hpp  ValidationDetail.hpp
src/2020/day_4/passport/tokens/: BirthYear.cpp  BirthYear.hpp  ChainBuilder.cpp  ChainBuilder.hpp  CountryID.cpp  CountryID.hpp  ExpirationYear.cpp  ExpirationYear.hpp  EyeColor.cpp  EyeColor.hpp  HairColor.cpp  HairColor.hpp  Height.cpp  Height.hpp  IssueYear.cpp  IssueYear.hpp  PassportID.cpp  PassportID.hpp  TokenBase.cpp  TokenBase.hpp
src/2020/day_5/: BinarySpacePartitioning.cpp  BinarySpacePartitioning.hpp  BisectData.cpp  BisectData.hpp  CMakeLists.txt  HighestId.hpp  Interpreter.hpp  MissingTicketLeftNeighbour.hpp  Seat.cpp  Seat.hpp  main.cpp
src/2020/day_6/: CMakeLists.txt  Group.cpp  Group.hpp  Groups.cpp  Groups.hpp  ICountingStrategy.hpp  Interpreter.hpp  main.cpp
src/2020/day_6/strategies/: CountRepeated.cpp  CountRepeated.hpp  CountUnique.cpp  CountUnique.hpp
src/utils/: CMakeLists.txt
src/utils/file_parser/: CMakeLists.txt  File.hpp  Interpreter.hpp
src/utils/string_ext/: CMakeLists.txt  Delimiter.hpp  SplitBy.hpp
tests/: CMakeLists.txt
tests/2019/day_1/: CMakeLists.txt  ConverterFixture.hpp  ConverterTests.cpp  EquationDoubleCheckerFixture.hpp  EquationDoubleCheckerTests.cpp  FuelCounterUpperFixture.hpp  FuelCounterUpperTests.cpp  FuelOperatorsForTest.hpp
tests/2019/day_1/impl/: ConverterFixture.hpp  ConverterTests.cpp  FuelOperatorsForTest.hpp
tests/2020/: CMakeLists.txt
tests/2020/day_1/: CMakeLists.txt  ExpensesReportFixture.hpp  ExpensesReportTests.cpp
tests/2020/day_2/: CMakeLists.txt  InterpreterFixture.hpp  InterpreterTests.cpp  PasswordDataTestUtils.hpp  PasswordsFixture.hpp  PasswordsTests.cpp  StrategyMock.hpp
tests/2020/day_2/strategies/: MinMaxFixture.hpp  MinMaxTests.cpp  PositionFixture.hpp  PositionTests.cpp
tests/2020/day_3/: CMakeLists.txt  CoordsTestUtils.hpp  GeologyFixture.hpp  GeologyTests.cpp  MapMock.hpp  ToboganFixture.hpp  ToboganMock.hpp  ToboganTests.cpp
